feat: implement delivery method grid