@@ -14,6 +14,7 @@ task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "src/main/**/*.kt"
 }
 
@@ -21,5 +22,6 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     args "-F", "src/main/**/*.kt"
 }
